feat: store generated files in object storage